tests/macros/int/page_size.rs
fn main() {
    requestty::questions![Int { page_size: todo!() }];
}
